# full_api

./: .env  Cargo.toml  api.db  api.db-shm  api.db-wal
migrations/: 20240411165603_produto.sql  20240411165618_fornecedor.sql  20240411165655_endereco.sql  20240412133556_users.sql  20240503071734_supplier.sql  20240503071758_product.sql
src/: main.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/db/: mod.rs
src/db/repository/: product.rs  supplier.rs  user.rs
src/docs/: mod.rs
src/log/: mod.rs
src/models/: endereco.rs  fornecedor.rs  mod.rs  product.rs  produto.rs  supplier.rs  users.rs
src/repository/: endereco.rs  fornecedor.rs  mod.rs  product.rs  produto.rs  supplier.rs  uow.rs  user.rs
src/routes/: auth.rs  fornecedor.rs  mod.rs  supplier.rs  users.rs
src/services/: mod.rs  user_service.rs
src/telemetry/: mod.rs
tests/: health_check
