[package]
name = "full_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
sqlx = { version = "0.7.4", features = ["sqlite","runtime-tokio-rustls","chrono"] }
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197",features = ["derive"] }
serde_json = "1.0.115"
bytes = "1.0"
async-trait = "0.1.79"
dotenv = "0.15.0"
anyhow = "1.0.82"
argon2 = { version = "0.6.0-pre.0", features = ["std"] }
thiserror = "1.0.58"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"